--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,7 +6,11 @@
   <ul>
     <% @list.tasks.each do |task| %>
       <li>
-        <%= task.description %> |
+        <% if task.done %>
+          <%= task.description %>
+        <% else %>
+          <strong><%= task.description %></strong>
+        <% end %> |
         <%= link_to "Edit", edit_list_task_path(@list, task) %> |
         <%= link_to "Delete", list_task_path(@list, task),
                                  :data => {:confirm => "Are you sure?",
