--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,5 +3,9 @@
 <%= form_for [@list, @task] do |f| %>
   <%= f.label :description %>
   <%= f.text_field :description %>
+  <% if !@task.description.nil? %>
+    <%= f.label :done %>
+    <%= f.check_box :done%>
+  <% end %>
   <p><%= f.submit %></p>
 <% end %>
