Show completed and uncompleted tasks separately

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,16 +1,28 @@
 <h1><%= @list.name %></h1>
 
-<% if @list.tasks.any? %>
-  <h4>Here are the tasks for this list:</h4>
+<% if !@not_done_tasks.nil? %>
+  <h4>Here are the uncompleted tasks for this list:</h4>
 
   <ul>
-    <% @list.tasks.each do |task| %>
+    <% @not_done_tasks.each do |task| %>
       <li>
-        <% if task.done %>
-          <%= task.description %>
-        <% else %>
-          <strong><%= task.description %></strong>
-        <% end %> |
+
+        <strong><%= task.description %></strong>
+
+        <%= link_to "Edit", edit_list_task_path(@list, task) %> |
+        <%= link_to "Delete", list_task_path(@list, task),
+                                 :data => {:confirm => "Are you sure?",
+                                                :method => "delete"} %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+<% if !@frogs.nil? %>
+  <h4>Here are the completed tasks: </h4>
+  <ul>
+    <% @frogs.each do |task| %>
+      <li>
+        <%= task.description %>
         <%= link_to "Edit", edit_list_task_path(@list, task) %> |
         <%= link_to "Delete", list_task_path(@list, task),
                                  :data => {:confirm => "Are you sure?",
